--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,134 @@
 <html>
   <head>
-    <title>Embark</title>
-    <link rel="stylesheet" href="css/app.css">
-    <script src="js/app.js"></script>
+    <title>Proof of Concept - Pintor</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.js"></script>
+    <script src="js/dapp.js"></script>
+
+    <style>
+  body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  .topnav {
+    overflow: hidden;
+    background-color: #333;
+  }
+
+  .topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
+
+  .topnav a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  .topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+  }
+
+  input.button {
+    background-color: #4CAF50;
+    color: white;
+  }
+  </style>
   </head>
   <body>
-    <h3>Welcome to Embark!</h3>
-    <p>See the <a href="http://embark.readthedocs.io/en/latest/index.html" target="_blank">Embark's documentation</a> to see what you can do with Embark!</p>
+
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a class="uno" href="#ContratarPintor">Contratar Pintor</a>
+      <a class="dos" href="#Reclamo">Reclamos del cliente</a>
+      <a class="tres" href="#ReclamoPintor">Reclamos del pintor</a>
+      <a class="cuatro" href="#Oraculo">Oráculos</a>
+    </div>
+
+
+      <div id="active" style="padding-left:16px">
+        <h2>Prueba de Concepto</h2>
+        <p>Contratar un pintor</p>
+      </div>
+
+    <div class="hide" style="diplay:none">
+      <div id ="uno" style="padding-left:16px">
+        <h2>Contratar Pintor</h2>
+        Direccion del pintor: <input type="text" name="address" value=""><br>
+        Precio: <input type="text" name="precio" value=""><br>
+        Cantidad de Oraculos en caso de disputa: <input type="text" name="oraculos" value="3"><br>
+        <input class="button" type="submit" value="Instanciar Contrato">
+      </div>
+      <div id ="dos" style="padding-left:16px">
+        <h2>Reclamo del cliente</h2>
+        <p>Falta</p>
+      </div>
+      <div id ="tres" style="padding-left:16px">
+        <h2>Reclamos del pintor</h2>
+        <p>Falta</p>
+      </div>
+      <div id ="cuatro" style="padding-left:16px">
+        <h2>Oráculos</h2>
+        <p>Falta.</p>
+      </div>
+    </div>
+
+
+
+
+
   </body>
+  <script>
+      $(document).ready(function(){
+        $(".hide").hide();
+        $(".active").click(function(){
+            $(".hide").show();
+            $("#active").show();
+            $("#uno").hide();
+            $("#dos").hide();
+            $("#tres").hide();
+            $("#cuatro").hide();
+        });
+        $(".uno").click(function(){
+            $(".hide").show();
+            $("#active").hide();
+            $("#uno").show();
+            $("#dos").hide();
+            $("#tres").hide();
+            $("#cuatro").hide();
+        });
+        $(".dos").click(function(){
+            $(".hide").show();
+            $("#active").hide();
+            $("#uno").hide();
+            $("#dos").show();
+            $("#tres").hide();
+            $("#cuatro").hide();
+        });
+        $(".tres").click(function(){
+            $(".hide").show();
+            $("#active").hide();
+            $("#uno").hide();
+            $("#dos").hide();
+            $("#tres").show();
+            $("#cuatro").hide();
+        });
+        $(".cuatro").click(function(){
+            $(".hide").show();
+            $("#active").hide();
+            $("#uno").hide();
+            $("#dos").hide();
+            $("#tres").hide();
+            $("#cuatro").show();
+        });
+
+
+      });
+  </script>
 </html>
